# serper-search-agent

./: Dockerfile  README.md  agent.py  pyproject.toml
.github/workflows/: build-agent.yaml
src/agentstack_agents/: agent.py  streaming_citation_parser.py
src/beeai_agents/: agent.py
