[project]
name = "beeai-agents"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "beeai-sdk",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uv.sources]
beeai-sdk = { git = "https://github.com/i-am-bee/beeai-platform", subdirectory = "apps/beeai-sdk" }

[project.scripts]
server = "beeai_agents.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
